fix: Interactive now allows overflow when ok

--- a/packages/skcom-css/src/components/interactive.scss
+++ b/packages/skcom-css/src/components/interactive.scss
@@ -8,13 +8,16 @@
 @use "../abstracts/mixins.scss" as mix;
 
 .skc-interactive {
-  position: relative;
-  overflow: hidden;
   -webkit-tap-highlight-color: transparent;
 
   &:not(.skc-interactive--no-state-layer)::before {
     @include mix.state-layer();
     background-color: var(--on-surface);
+  }
+
+  &:not(.skc-interactive--no-ripple) {
+    position: relative;
+    overflow: hidden;
   }
 
   &:hover::before {
